# ai-image-cropper

./: .gitignore  README.md  app.py  config.py  cropper.py  pyproject.toml
performance/: check_gpu.ps1  monitor_gpu.ps1  performance_comparison.py  performance_comparison_gpu.py  performance_test.ps1  performance_test.sh  test_results.txt
