[project]
name = "ai-image-cropper"
version = "1.0.0"
description = "Intelligent image cropping tool with multiple detection methods"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Gary A. Stafford"}
]
keywords = ["image-processing", "cropping", "yolo", "detr", "computer-vision", "ai", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "gradio>=5.49.0",
    "opencv-python>=4.12.0",
    "opencv-contrib-python-headless>=4.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "timm>=1.0.0",
    "transformers>=4.30.0",
    "ultralytics>=8.3.0",
]
# Note: torch is installed separately with CUDA support
# Install with: uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121

[project.urls]
Homepage = "https://github.com/garystafford/ai-image-cropper"
Repository = "https://github.com/garystafford/ai-image-cropper"
Issues = "https://github.com/garystafford/ai-image-cropper/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "hatchling>=1.0.0",
]

[project.scripts]
crop-ui = "app:main"
crop-cli = "cropper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "cropper.py", "config.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']
